# navis_lua

./: .clang-format  .gitignore  CMakeLists.txt  Justfile  LICENSE  README.md  vcpkg.json
assets/scripting/: api_reference.lua  block.lua  danger_noodle.lua  death_star.lua  script.lua  stick_ship.lua
src/: ShipSimulationScene.h  assert.h  defines.h  ecs.h  main.cpp
src/engine/: AssetManager.cpp  AssetManager.h  EngineApi.h  Game.h  IScene.cpp  IScene.h  SceneStack.cpp  SceneStack.h
